# Two-Stage-Agent-co-work

./: .gitignore  PROJECT_CLEANUP_REVIEW.md  README.md  __init__.py  pyproject.toml
agents/: __init__.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py  tool_aware_agent.py
builder/: __init__.py  attachment_evidence_builder.py  evidence_builder.py  search_evidence_builder.py  search_query_planner.py  stage2_tool_router.py
context/: __init__.py  builder.py
core/: __init__.py  agent.py  config.py  database_config.py  exceptions.py  llm.py  message.py
decisionmaker/: __init__.py  base_decision_maker.py  vertical_solver_first_decision_maker.py
evaluation/: __init__.py  benchmark_adapter.py  benchmark_logger.py  bfcl_adapter.py  gaia_adapter.py  gaia_analysis_report.py  gaia_logging.py  gaia_memory_trace.py  gaia_run_config.py  gaia_runner.py
memory/: __init__.py  base.py  database_config.py  embedding.py  lesson_rule.py  manager.py  policy.py  retrieval_cache.py
network/: agent_network.py  agent_neuron.py  agentnetwork_helper.py  agentneuron_helper.py  consensus_judge.py  exceptions.py  network_runtime.py  slm_agent.py  stage1_judge.py  stage1_result_selector.py  tool_manager.py  utils.py
parser/: __init__.py  base_parser.py  bfcl_tool_call_parser.py  decision_parser.py  json_parse.py  ranking_parser.py  stage_parser.py
prompt/: __init__.py  bfcl_prompt_builder.py  builder.py  decision_prompt_builder.py  ranking_prompt_builder.py  repair_prompt_builder.py  stage1_prompt_builder.py  stage2_prompt_builder.py
(+155 files in other folders)
