[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper"
version = "0.1.0"
description = "Two-stage agent network with memory, tools, and benchmark evaluation."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "venv312",
  "result",
  "memory_data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
